--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -64,7 +64,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 8vw 0;
+  padding: min(8vw, 120px) 0;
   max-width: 70%;
   margin: auto;
   text-align: center;
