--- a/src/utils/css/screen.css
+++ b/src/utils/css/screen.css
@@ -50,12 +50,12 @@ body {
 /* ---------------------------------------------------------- */
 
 .site-wrapper {
-  padding: 3vw;
+  padding: 3vw 15vw;
   min-height: 100vh;
 }
-@media (max-width: 850px) {
+@media (max-width: 1500px) {
   .site-wrapper {
-    padding: 6vw;
+    padding: 3vw 10vw;
   }
 }
 
